--- a/templates/app_reminders/add_user.html
+++ b/templates/app_reminders/add_user.html
@@ -13,7 +13,7 @@
                 <p class="form"><label for="{{ f.id_for_label }}">{{f.label}}: </label>{{ f }}</p>
                 <div >{{ f.errors }}</div>
             {% endfor %}
-            <button class="button_for_header" type="submit">Регистрация</button>
+            [<button class="button_for_header" type="submit">Регистрация</button>]
         </form>
     </div>
 {% endblock %}
