--- a/templates/app_reminders/index.html
+++ b/templates/app_reminders/index.html
@@ -9,9 +9,10 @@
     <link type="text/css" href="{% static 'app_reminders/css/style.css' %}" rel="stylesheet" />
     <link type="text/css" href="{% static 'app_reminders/css/style_for_content.css' %}" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Commissioner&family=Montserrat:wght@300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href={% static 'app_reminders/css/google_css.css' %}/>
+    <link rel="stylesheet" href={% static 'app_reminders/css/bootstrap.css' %}/>
 {#    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"/>#}
-	<link rel="stylesheet" href={% static 'app_reminders/css/main.css' %}/>
+	<link rel="stylesheet" href={% static 'app_reminders/css/main2.css' %}/>
+
     <title>-----</title>
 
 <body>
