--- a/templates/app_reminders/tasks.html
+++ b/templates/app_reminders/tasks.html
@@ -65,5 +65,5 @@
 let as = '{{ task_for_js }}'
 as = as.replaceAll('&quot;', '"')
 </script>
-<script type="text/javascript" src={% static "app_reminders/js/main.js" %}></script>
+<script type="text/javascript" src={% static "app_reminders/js/main2.js" %}></script>
 {% endblock %}
